--- a/index.html
+++ b/index.html
@@ -69,8 +69,8 @@
     <section id="projects">
       <h2>Featured Projects</h2>
       <ul>
-        <li><strong><a href="https://github.com/the-game-bureau/The-Murder-Atlas" target="_blank">The Murder Atlas</a></strong> – An evolving platform for mystery and location-based narrative experiences.</li>
-        <li><strong><a href="https://github.com/the-game-bureau/BEEJUMBLE" target="_blank">Bee Jumble</a></strong> – A daily HTML+XML tool for Spelling Bee fans. Includes jumbles, hints, and printable sheets.</li>
+        <li><strong>The Murder Atlas</strong> – An evolving platform for mystery and location-based narrative experiences.</li>
+        <li><strong>The Completely Unauthorized NY Times Spelling Bee Toolbox</a></strong> – A daily HTML+XML tool for Spelling Bee fans.</li>
         <li><strong>Oswald’s Diary</strong> – An SMS-based scavenger hunt tracing Lee Harvey Oswald’s path through New Orleans.</li>
         <li><strong>This Must Be The Place: New Orleans Edition</strong> – A rock & roll immersive walking tour with games, band lore, and musical ghost stories.</li>
         <li><strong>Local Bar Tees</strong> – A t-shirt shop supporting bars, bands, and the beautifully local.</li>
@@ -84,12 +84,12 @@
 
     <section id="contact">
       <h2>Contact</h2>
-      <p>Reach me at <a href="mailto:missioncontrol@thegamebureau.com">missioncontrol@thegamebureau.com</a> or find me on <a href="https://github.com/the-game-bureau" target="_blank">GitHub</a>.</p>
+      <p>Reach me at <a href="mailto:kevinmkolb@gmail.com">kevinmkolb@gmail.com</a> or find me on <a href="https://github.com/KevinKolb" target="_blank">GitHub</a>.</p>
     </section>
   </main>
 
   <footer>
-    <p>&copy; 2025 Kevin Kolb · Built with 💛 in New Orleans</p>
+    <p>&copy; 2025 Kevin Kolb · Built with ⚜️ in New Orleans</p>
   </footer>
 </body>
 </html>
