--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
       font-family: 'Montserrat', sans-serif;
       margin: 0;
       padding: 0;
-      background: #fdfdfd;
-      color: #222;
+      background: #ffffff;
+      color: #0a0a0a;
       line-height: 1.6;
     }
     header {
-      background-color: #000;
-      color: #FFD700;
+      background-color: #0a0a0a;
+      color: #d3bc8d;
       padding: 2rem;
       text-align: center;
     }
@@ -29,10 +29,13 @@
       margin-top: 1rem;
     }
     nav a {
-      color: #FFD700;
+      color: #d3bc8d;
       margin: 0 1rem;
       text-decoration: none;
       font-weight: bold;
+    }
+    nav a:hover {
+      text-decoration: underline;
     }
     main {
       padding: 2rem;
@@ -43,14 +46,25 @@
       margin-bottom: 3rem;
     }
     h2 {
-      color: #444;
+      color: #0a0a0a;
       margin-bottom: 0.5rem;
+    }
+    ul li strong {
+      color: #d3bc8d;
+    }
+    a {
+      color: #0a0a0a;
+      font-weight: bold;
+    }
+    a:hover {
+      color: #d3bc8d;
     }
     footer {
       text-align: center;
       padding: 2rem;
       font-size: 0.9rem;
       color: #888;
+      background-color: #f4f4f4;
     }
   </style>
 </head>
