--- a/whodat.html
+++ b/whodat.html
@@ -2,19 +2,28 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Who Dat Trigger Test</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Who Dat Test – Kevin Kolb</title>
+  <link rel="icon" href="https://upload.wikimedia.org/wikipedia/commons/5/5c/New_Orleans_Saints_logo.svg" type="image/svg+xml" />
   <style>
     body {
       font-family: sans-serif;
+      background: #ffffff;
+      color: #0a0a0a;
       padding: 2rem;
+    }
+
+    h1 {
+      color: #d3bc8d;
     }
 
     #whodat {
       display: none;
+      text-align: center;
       font-size: 2rem;
       font-weight: bold;
-      color: goldenrod;
-      margin-top: 2rem;
+      color: #d3bc8d;
+      margin-top: 3rem;
       animation: fadeIn 1s ease forwards;
     }
 
@@ -25,11 +34,14 @@
   </style>
 </head>
 <body>
-  <h1>Type “whodat” anywhere to trigger the chant</h1>
+  <h1>Type “whodat” anywhere</h1>
+  <p>To test the Easter egg, click anywhere on this page and type: <code>whodat</code></p>
+
   <div id="whodat">WHO DAT?! 🖤⚜️</div>
 
   <audio id="whodat-audio" preload="auto">
     <source src="https://actions.google.com/sounds/v1/crowds/football_crowd_cheer.ogg" type="audio/ogg">
+    Your browser does not support audio.
   </audio>
 
   <script>
@@ -39,24 +51,25 @@
     window.addEventListener('keydown', (event) => {
       const key = event.key.toLowerCase();
       buffer.push(key);
-
-      // Keep only the last N entries
-      if (buffer.length > secretCode.length) {
-        buffer.shift();
-      }
+      if (buffer.length > secretCode.length) buffer.shift();
 
       if (buffer.join('') === secretCode.join('')) {
-        const text = document.getElementById('whodat');
+        const message = document.getElementById('whodat');
         const audio = document.getElementById('whodat-audio');
 
-        // Show the message
-        text.style.display = 'block';
+        if (message) {
+          message.style.display = 'block';
+        }
 
-        // Try to play the audio
-        audio.currentTime = 0;
-        audio.play().catch((err) => {
-          console.warn("Autoplay failed:", err.message);
-        });
+        if (audio) {
+          audio.currentTime = 0;
+          const playPromise = audio.play();
+          if (playPromise !== undefined) {
+            playPromise.catch(error => {
+              console.warn("Audio autoplay blocked:", error.message);
+            });
+          }
+        }
       }
     });
   </script>
